# awesome-snippets

./: README.md
Bash/: print_only_env_var_names.sh
configurations/python/: .cz.toml  pyproject.toml  ruff.toml
python/: auto_keyboard_typing.py
